--- a/css/menu.css
+++ b/css/menu.css
@@ -1,24 +1,28 @@
 body{
-    margin: 0;
-    padding: 0;
-    background-color: rgb(218, 192, 240);
+    margin: 0px;
+    padding: 0%;
+    border-radius: 120px;
+
+}
+
+#bodymenu{
+    background-image: linear-gradient(10deg, #f428da 0, #d81be2 16.67%, #b415e9 33.33%, #8519f0 50%, #3323f6 66.67%, #002efc 83.33%, #0037ff 100%);    height: 100vh;
 }
 
 .header{
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(155, 93, 190);
-    border-radius: 15px;
-    height: 120px;
-    margin-top: 10px;
+    background-image: radial-gradient(circle at 48.64% 52.92%, #d143ac 0, #c43cb0 16.67%, #b436b5 33.33%, #a232b9 50%, #8d30bd 66.67%, #7430c2 83.33%, #5532c6 100%);
+    border-radius: 20px;
+    border-color: aliceblue;
+    border-width: 20px;
+    margin-top: 20px;
     margin-left: 10px;
     margin-right: 10px;
 }
 
 .titulo{
-    background-color: rgb(201, 198, 204);
+    background-image: radial-gradient(circle at 48.64% 52.92%, #d143ac 0, #c43cb0 16.67%, #b436b5 33.33%, #a232b9 50%, #8d30bd 66.67%, #7430c2 83.33%, #5532c6 100%);
     text-align: center;
-    color: rgb(68, 66, 66);
+    color: rgb(255, 255, 255);
 }
 
 .menu{
@@ -29,14 +33,15 @@ body{
 .menu a{
     text-decoration: none;
     padding: 10px;
-    color: rgb(71, 69, 69);
-    background-color: gainsboro;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(9, 13, 255);
     margin: 10px;
 }
 
 .menu a:hover{
     border: 1px solid rgb(56, 55, 55);
     background-color: rgb(75, 90, 85);
-    color: white;
+    color: rgb(255, 255, 255);
     border-radius: 10px;
 }
