--- a/css/respuestas.css
+++ b/css/respuestas.css
@@ -6,12 +6,13 @@
 
 .tablatitulo{
     text-align: center;
+    color: white;
 }
 
 .ttitulo{
     border:1px solid black;
-    background-color:gray;
-    color:white;
+    background-color:rgb(248, 144, 234);
+    color:rgb(0, 0, 0);
 }
 
 .trmain th{
