--- a/css/respuestas.css
+++ b/css/respuestas.css
@@ -11,7 +11,7 @@
 
 .ttitulo{
     border:1px solid black;
-    background-color:rgb(248, 144, 234);
+    background-color:#7f65bd;
     color:rgb(0, 0, 0);
 }
 
