--- a/css/menu.css
+++ b/css/menu.css
@@ -7,6 +7,7 @@ body{
 
 #bodymenu{
     background-image: linear-gradient(10deg, rgb(255, 255, 255) , rgb(173, 173, 173) , #7f65bd , #7f65bd, #7f65bd , rgb(173, 173, 173) , rgb(255, 255, 255) );    height: 100vh;
+    margin-top: 20px;
 }
 .header{
     background-color: grey;
@@ -48,4 +49,20 @@ body{
     padding: 9px;
     cursor: pointer;
     transition: .3s;
+}
+.dato{
+    background-color: white;
+    color: black;
+    margin-left: 200px;
+    margin-right: 200px;
+    text-align: center;
+    border-radius: 10px;
+}
+.subtitulo{
+    color: white;
+    background-color: grey;
+    border-radius: 10px;
+    margin-left: 150px;
+    margin-right: 150px;
+    text-align: center;
 }
